# smashpp

./: -nr  .1.2.pos.swp  .dockerignore  .editorconfig  .gitattributes  .gitignore  .out.svg.swp  .simple_svg_1.0.0.hpp.swp  .travis.yml  1  1.1.2.s0  1.2.pos  2  2.3.pos  226  3  369  45  45.226.pos  492  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COX1_pos  Dockerfile  LICENSE  M80517.1.fasta.REMOVED.git-id  M80517.1.fasta.V01555.2.fasta.pos  M80517.1.seq  M80517.1.seq.REMOVED.git-id  M80517.1.seq.V01555.2.seq.pos  NC_020611.seq  NC_020611.seq.NC_028344.seq.pos  NC_028344.seq  Phages and the Evolution of Bacterial Pathogens. from Genomic Rearrangements to Lysogenic Conversion.pdf.REMOVED.git-id  README.md  RefL-TarL.pos  RefL.TarL.pos  RefM-TarM.pos  RefM.TarM.pos  (+95 more)
.github/: FUNDING.yml
AFproject/: GeCo  run.py
Diogo/: 0-M.fuscata_B.taurus-s0  0-M.fuscata_B.taurus-s1  0-M.fuscata_B.taurus-s10  0-M.fuscata_B.taurus-s11  0-M.fuscata_B.taurus-s12  0-M.fuscata_B.taurus-s13  0-M.fuscata_B.taurus-s14  0-M.fuscata_B.taurus-s15  0-M.fuscata_B.taurus-s16  0-M.fuscata_B.taurus-s17  0-M.fuscata_B.taurus-s18  0-M.fuscata_B.taurus-s19  0-M.fuscata_B.taurus-s2  0-M.fuscata_B.taurus-s20  0-M.fuscata_B.taurus-s21  0-M.fuscata_B.taurus-s22  0-M.fuscata_B.taurus-s23  0-M.fuscata_B.taurus-s24  0-M.fuscata_B.taurus-s25  0-M.fuscata_B.taurus-s26  0-M.fuscata_B.taurus-s27  0-M.fuscata_B.taurus-s28  0-M.fuscata_B.taurus-s29  0-M.fuscata_B.taurus-s3  0-M.fuscata_B.taurus-s4  0-M.fuscata_B.taurus-s5  0-M.fuscata_B.taurus-s6  0-M.fuscata_B.taurus-s7  0-M.fuscata_B.taurus-s8  0-M.fuscata_B.taurus-s9  0-M.fuscata_B.taurus.pos  0-M.fuscata_P.verreauxi-s25  0-M.fuscata_P.verreauxi-s26  0-M.fuscata_P.verreauxi-s27  0-O.cuniculus_M.fuscata-s31  0-O.cuniculus_P.abelii-s26  0-O.cuniculus_P.abelii-s27  0-O.cuniculus_P.paniscus-s31  0-O.cuniculus_P.paniscus-s32  0-O.cuniculus_P.troglodytes-s28  (+243 more)
cmake/: version.hpp.in
dataset/: RefM.REMOVED.git-id  TarL.REMOVED.git-id
diogo/: 1  MT-CO1.fa.1.pos  unwrap.py
docs/: RELEASING.md
example/: 0.tar.fil  0.tar.pos  0.tar.s0  0.tar.s1  1.0.refs.tars.s1.refs.pos  1.1.1.refs.tars.s0.refs.s0.1.refs.tars.s0.pos  1.1.1.refs.tars.s0.refs.s1.1.refs.tars.s0.pos  1.1.refs.tars.s0.refs.pos  1.1.refs.tars.s0.refs.s0  1.1.refs.tars.s0.refs.s1  1.refs.tars.pos  1.refs.tars.s0  B.taurus  RefM.TarM.pos  b.c.pos  b.o.pos  c  mid.0.0.refs.tars.s2.refs.pos  mid.0.refs.tars.pos  mid.1.refs.tars.pos  py_run.py  ref  ref-tar.pos  ref.tar.pos  refs.tars.pos  run.py  smashpp  smashpp.REMOVED.git-id  tar
experiment/: RefPerm.TarPerm.pos  RefPerm1000.TarPerm.pos  RefPerm30.TarPerm.pos  RefS.TarS.pos  bench.csv  log_main  log_viz  xp.py
paper/: 2.pdf.REMOVED.git-id  Drawing1.pdf.REMOVED.git-id  Drawing1.vsdx  Drawing1.vsdx.REMOVED.git-id  __latexindent_temp.tex  bk_data_model.vsdx  bk_synth.vsdx  cfg.tex  data model.vsdx  data model.vsdx.REMOVED.git-id  data_model.pdf.REMOVED.git-id  data_model.vsdx  data_model.vsdx.REMOVED.git-id  data_struct.pdf.REMOVED.git-id  data_struct.vsdx  data_struct.vsdx.REMOVED.git-id  declaration.tex  drawing.svg.REMOVED.git-id  example.pdf.REMOVED.git-id  experiment.tex  main.pdf.REMOVED.git-id  main.tex  main.xdv  main.xdv.REMOVED.git-id  method.tex  old_data_model2.vsdx  old_simil.vsdx  old_simil2.vsdx  old_simil2.vsdx.REMOVED.git-id  old_synth.vsdx  paper-refs.bib  paper_smash_supp.pdf.REMOVED.git-id  ref.bib  references.tex  result.tex  schema - Copy.vsdx.REMOVED.git-id  schema.pdf.REMOVED.git-id  schema.svg.REMOVED.git-id  schema.vsdx  schema.vsdx.REMOVED.git-id  (+26 more)
result/: 1471-2164-12-447.pdf.REMOVED.git-id  CompSmash.csv  GGA18_MGA20.csv  Mut.csv  PXO99A.seq.MAFF_311018.seq.pos  PXO99A_MAFF_311018.csv  RefComp.TarComp.pos  RefCompTarComp.pos  RefComp_b.TarComp_b.pos  RefL-TarL.pos  RefL.TarL.pos  RefM-TarM.pos  RefMut-TarMut.pos  RefPerm.TarPerm.pos  RefPerm30.TarPerm.pos  RefPerm30TarPerm.pos  RefS-TarS.pos  RefSTarS.pos  RefXL-TarXL.pos  VII.seq.VII.seq.pos  bench.csv  nrc.csv  nrc.tsv  remove newline.txt  test_plot_fil.py  test_plot_prf_fil.py
script/: RefMut  RefMut.REMOVED.git-id  TarMut  TarMut.REMOVED.git-id  goose-mutatedna  mori  mori.REMOVED.git-id  mori.backbone  mori.bbcols  mori.guide_tree  r.sslist.REMOVED.git-id  refl.REMOVED.git-id  refm  refm.REMOVED.git-id  refs  run.sh  smashpp-inv-rep  smashpp-inv-rep.REMOVED.git-id  t.sslist.REMOVED.git-id  tarl.REMOVED.git-id  tarm  tarm.REMOVED.git-id  tars
shiny/: .RData  .RData.REMOVED.git-id  .Rhistory  app.R  shiny.Rproj
src/: CMakeLists.txt  application.hpp  assert.hpp  bench.cpp  check.hpp  clean.hpp  cmls.cpp  cmls.hpp  cmls4.cpp  cmls4.hpp  color.cpp  color.hpp  container.hpp  def.hpp  exception.hpp  excludeN.cpp  fcm.cpp  fcm.hpp  file.hpp  filter.cpp  filter.hpp  fn.hpp  gnuplot.cpp  gnuplot.hpp  invRep.cpp  logtbl8.cpp  logtbl8.hpp  main.cpp  mdlpar.hpp  memory.hpp  naming.hpp  number.hpp  output.cpp  output.hpp  par.cpp  par.hpp  print.hpp  segment.cpp  segment.hpp  string.hpp  (+18 more)
src/eleanor/: buffer.h  common.cpp  defs.h  eleanora-visual.cpp  msg.cpp  paint.cpp  param.h  pos.cpp
src/q/: buffer.cpp  eleanora-visual.cpp  hash.cpp  mem.cpp  mem.h  msg.cpp  msg.h  paint.cpp  paint.h  pos.h  time.cpp
src/sparsepp/sparsepp/: spp.h.REMOVED.git-id  spp_dlalloc.h.REMOVED.git-id
src/sparsepp/tests/: spp_test.cc.REMOVED.git-id
src/visualizer/: buffer.cpp  buffer.h  common.cpp  common.h  defs.h  eleanora-visual.cpp  hash.cpp  hash.h  mem.cpp  mem.h  msg.cpp  msg.h  paint.cpp  paint.h  param.h  pos.cpp  pos.h  rmodel.cpp  rmodel.h  time.cpp  time.h  vizpaint.cpp  vizpaint.h  vizparam.cpp  vizparam.hpp
tests/: ExpectCommandFailure.cmake  RunBenchmarkSuite.cmake  RunBenchmarkSuiteSmoke.cmake  RunHelperToolsSmoke.cmake  RunInputNormalization.cmake  RunInstallLayout.cmake  RunInvalidBaseFailure.cmake  RunNoSegmentsGuidance.cmake  RunParallelConsistency.cmake  RunRegressionBaseline.cmake  RunSamplingFilterConsistency.cmake  RunSmashppSmoke.cmake  RunVersionOverride.cmake
xp/: 0.10.seq.17.seq.fil  (+190 more)
xp-Copy/: RefM.TarM.pos  RefMut.TarMut.pos  plot.R  run_xp.py  test
(+397 files in other folders)
